# transformer-from-scratch

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  train.py
.github/workflows/: ci.yml
configs/: config.yaml
configs/tracking/: none.yaml  wandb.yaml
notebooks/: 01_model_prototyping.ipynb
scripts/: generate.py  plot.py  prepare_data.py  utils.py
src/: checkpoint_manager.py  config.py  config_old.py  logging_config.py  metrics.py  model.py  train.py  utils.py
src/loggers/: json_logger.py  logging_config.py  metric_entry.py  wandb_logger.py
src/models/: transformer.py
src/trainers/: base_trainer.py
src/utils/: checkpoint.py  data.py  device_type.py  run_name.py  tokenizer.py
tests/: test_logging.py  test_model.py  test_train.py  test_utils.py
